-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 18.0.0-beta1
-
-
6a976bd57 (18.0)
Tbh - no clue what really has triggered this, but I played around with a small project having 4 different kits active (one of them invalid), some of them had multiple run configurations.
Switching between them, creating run configs, cloning them into other active kits copying build steps from one to another, disabling kit, reenabling it again,..
At one point QC crashed.. got the attached backtrace
(basically the first call in CMakeBuildSettingsWidget::updateButtonState() crashed because cmakeBuildSystem() returned nullptr