CMakePM: Fix crash in CMakeBuildSettingsWidget::updateButtonState

At a glance, the obvious candidate for the crash reported in the bug
report was the `m_buildConfig` QPointer variable.

This ensures guarding against null access.

Fixes: QTCREATORBUG-33494
Change-Id: I068b4a10f82c9afc9c4789092c86fb2930dd66e2
Reviewed-by: hjk <hjk@qt.io>